@@ -1,6 +1,8 @@
 2009-09-14  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/ext/match-window.jl: string change in rename-window
 	                                       improved keymap-trans
+					       renamed rename-window to rename-window-func
+					       fixed a glitch in rename-window-interactive
 
 2009-09-13  Christopher Bratusek <zanghar@freenet.de>
 	* sawfish.doap: added
